2007-09-03 Nicolas Roard <nicolas@roard.com>

	* configure:
	* configure.ac: check that Xrender lib is present and add it to the
	link process. Only use Xrender for Cairo.
	* Source/cairo/XGCairoXImageSurface.m: use 32 bits surfaces when
	available, else stay with 24bits surface.
	* Source/cairo/CairoGState.m: some cleaning, and fixed the scrolling
	bug. 

2007-09-02 Nicolas Roard <nicolas@roard.com>

	* configure:
	* configure.ac:
	* config.h.in: added checking for Xrender extension
	* Source/x11/context.c: Now check for 32 bit surface + alpha channel
	* Source/cairo/XGCairoSurface.m: Modified to get the correct visual,
	not the default one
	* Source/cairo/CairoGState.m: Use cairo groups to allow recopy on the
	same surface

2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m: Extracted code shared between these two
	files into new files.
	* Source/art/FTFaceInfo.h,
	* Source/art/FTFaceInfo.m,
	* Source/art/FTFontEnumerator.h,
	* Source/art/FTFontEnumerator.m: New files with extracted code.
	* Source/art/GNUmakefile: Add new source files.

2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Revert last
	change.
	* Source/x11/XGServerWindow.m (-setinputfocus:): Use CurrentTime
	instead of generic.lastTime.
	
2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (-processEvent:): Made handling of
	focus in and out more explicit.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGFontManager.m (load_cache),
	* Tools/font_cacher.m (-writeCacheTo): Increase version number of
	font format, as font mask values have changed.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Set lastTime to
	CurrentTime not 1 to get setinputfocus working for the first
	activation of the application.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkWMSupports:,