@@ -1,3 +1,8 @@
+2007-09-04 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source\winlib\WIN32FontInfo.m (-coveredCharacterSet): Create the
+	NSMutableCharacterSet to store the character ranges in.
+
 2007-09-03 Nicolas Roard <nicolas@roard.com>
 
 	* configure:
